docs/api/qiskit/0.19/qiskit.providers.basicaer.BasicAerProvider.mdx
---
title: BasicAerProvider (v0.19)
description: API reference for qiskit.providers.basicaer.BasicAerProvider in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.basicaer.BasicAerProvider
---

# BasicAerProvider

<Class id="qiskit.providers.basicaer.BasicAerProvider" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/basicaer/basicaerprovider.py" signature="BasicAerProvider(*args, **kwargs)" modifiers="class">
  Provider for Basic Aer backends.

  ## Methods

  <span id="basicaerprovider-backends" />

  ### backends

  <Function id="qiskit.providers.basicaer.BasicAerProvider.backends" signature="BasicAerProvider.backends(name=None, filters=None, **kwargs)">
    Return a list of backends matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    **a list of Backends that match the filtering**

    criteria.

    **Return type**

    list\[[BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")]
  </Function>

  <span id="basicaerprovider-get-backend" />

  ### get\_backend

  <Function id="qiskit.providers.basicaer.BasicAerProvider.get_backend" signature="BasicAerProvider.get_backend(name=None, **kwargs)">
    Return a single backend matching the specified filtering.

    **Parameters**

    *   **name** (*str*) – name of the backend.
    *   **\*\*kwargs** – dict used for filtering.

    **Returns**

    a backend matching the filtering.

    **Return type**

    [BaseBackend](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")

    **Raises**

    [**QiskitBackendNotFoundError**](qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError") – if no backend could be found or more than one backend matches the filtering criteria.
  </Function>
</Class>

